hphp/hack/test/typecheck/array/safe_vector_array/gena_correctly_types_varray_or_darray_argument.php.exp
File "gena_correctly_types_varray_or_darray_argument.php", line 13, characters 10-72:
Invalid return type (Typing[4110])
File "gena_correctly_types_varray_or_darray_argument.php", line 12, characters 71-73:
This is an int
File "gena_correctly_types_varray_or_darray_argument.php", line 8, characters 31-34:
It is incompatible with a nullable type
